--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7"
   }
 }
