--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
+    "excel4node": "^1.7.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.7"
   }
 }
